[SELC-8099] feat: Removing queryParam productId
